Added tag filters

--- a/index.html
+++ b/index.html
@@ -3,19 +3,55 @@ title: Welcome
 layout: default
 ---
 <h2>Share What You Know</h2>
-<p class="lead">Welcome to the Central App Dev blog. This site can be used to share resources and how-to articles with your fellow developers here at PennyMac. <a href="{{ baseurl }}how-to-contribute-to-levelup">Here's a how-to article</a> to show you how to get started.</p>
+<p class="lead">Welcome to the Central App Dev blog. This site can be used to share resources and how-to articles with your fellow developers here at PennyMac. <a href="{{ baseurl }}how-to-contribute-to-levelup">Here&#8217;s a how-to article</a> to show you how to get started.</p>
+
+<div class="blog-tags-list m-t-3 text-center">
+  <a href onclick="removeFilters(); return false;" class="btn btn-primary btn-xs m-b-1">Recent Posts <span class="badge">{{ site.posts.size }}</span></a>
+  {% assign sorted_tags = site.tags | sort %}
+  {% for tag in sorted_tags %}
+    {% assign t = tag | first %}
+    {% assign posts = tag | last %}
+    <span class="blog-tag-item" id="{{ t }}-item">
+      <a href onclick="filter('{{ t }}'); return false;" class="btn btn-primary btn-xs m-b-1">{{ t | capitalize }} Posts <span class="badge">{{ site.tags[t].size }}</span></a> 
+    </span>  
+  {% endfor %}
+</div>
 
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-    <h3>Recent Posts</h3>
-    {% for post in site.posts %}
-      <small>{{ post.date | date: "%B %-d, %Y" }}</small>
-      <h4><a href="{{ post.url | relative_url }}">{{ post.title }}</a> <small>{% if post.author %} by {{ post.author }}{% endif %}</small></h4>
-      <p>{{ post.excerpt }} <a href="{{ post.url | relative_url }}">Read more &hellip;</a></p>
-      {% unless forloop.last == true %}
-        <hr>
-      {% endunless %}
+
+    <div id="recent">
+      <h3>Recent Posts</h3>
+      {% for post in site.posts %}
+        <small>{{ post.date | date: "%B %-d, %Y" }}</small>
+        <h4><a href="{{ post.url | relative_url }}">{{ post.title }}</a> <small>{% if post.author %} by {{ post.author }}{% endif %}</small></h4>
+        <p>{{ post.excerpt }} <a href="{{ post.url | relative_url }}">Read more &hellip;</a></p>
+        {% unless forloop.last == true %}
+          <hr>
+        {% endunless %}
+      {% endfor %}
+    </div>
+    
+    {% for tag in site.tags %}
+      {% assign t = tag | first %}
+      {% assign posts = tag | last %}
+      <div class="blog-list-container hidden" id="{{ t }}-container">
+        <div class="blog-list">
+          <h3>{{ t | capitalize }} Posts</h3>
+          {% for post in posts %}
+            {% if post.tags contains t %}
+              <small>{{ post.date | date: "%B %-d, %Y" }}</small>
+              <h4><a href="{{ post.url | relative_url }}">{{ post.title }}</a> <small>{% if post.author %} by {{ post.author }}{% endif %}</small></h4>
+              <p>{{ post.excerpt }} <a href="{{ post.url | relative_url }}">Read more &hellip;</a></p>
+              {% unless forloop.last == true %}
+                <hr>
+              {% endunless %}
+            {% endif %}
+          {% endfor %}
+        </div>
+      </div>
     {% endfor %}
+
   </div>
 </div>
 
