--- a/index.html
+++ b/index.html
@@ -17,18 +17,30 @@ layout: default
   {% endfor %}
 </div>
 
+
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
 
     <div id="recent">
       <h3>Recent Posts</h3>
       {% for post in site.posts %}
-        <small>{{ post.date | date: "%B %-d, %Y" }}</small>
-        <h4><a href="{{ post.url | relative_url }}">{{ post.title }}</a> <small>{% if post.author %} by {{ post.author }}{% endif %}</small></h4>
-        <p>{{ post.excerpt }} <a href="{{ post.url | relative_url }}">Read more &hellip;</a></p>
-        {% unless forloop.last == true %}
-          <hr>
-        {% endunless %}
+        <div class="card m-b-3">
+          {% if post.image %}
+            <a href="{{ post.url | relative_url }}"><img class="card-img-top img-fluid" src="{{ post.image }}" alt="{{ post.title }}" title="{{ post.title }}"></a>
+          {% else %}
+            <img class="card-img-top img-fluid" src="https://source.unsplash.com/category/technology/?laptop" alt="{{ post.title }}"> 
+          {% endif %}
+          {% if post.author_image and post.author_url %}
+            <a href="{{ post.author_url }}" data-toggle="tooltip" data-placement="bottom" title="Go to {{ post.author_name }}'s website" target="_blank">
+              <img src="{{ post.author_image }}" alt="{{ post.author_name }}" class="img-circle center-block author-pic">
+            </a>
+          {% endif %}
+          <div class="card-block">
+            <h4 class="card-title">{{ post.title }} <small>by {{ post.author_name }}</small></h4>
+            <p class="card-text">{{ post.excerpt }} <a href="{{ post.url | relative_url }}" class="card-link">Read more&hellip;</a></p>
+            <p class="footer"><small class="text-muted">{{ post.date | date: "%B %-d, %Y" }}</small></p>
+          </div>
+        </div>
       {% endfor %}
     </div>
     
@@ -40,12 +52,23 @@ layout: default
           <h3>{{ t | capitalize }} Posts</h3>
           {% for post in posts %}
             {% if post.tags contains t %}
-              <small>{{ post.date | date: "%B %-d, %Y" }}</small>
-              <h4><a href="{{ post.url | relative_url }}">{{ post.title }}</a> <small>{% if post.author %} by {{ post.author }}{% endif %}</small></h4>
-              <p>{{ post.excerpt }} <a href="{{ post.url | relative_url }}">Read more &hellip;</a></p>
-              {% unless forloop.last == true %}
-                <hr>
-              {% endunless %}
+              <div class="card m-b-3">
+                {% if post.image %}
+                  <a href="{{ post.url | relative_url }}"><img class="card-img-top img-fluid" src="{{ post.image }}" alt="{{ post.title }}" title="{{ post.title }}"></a>
+                {% else %}
+                  <img class="card-img-top img-fluid" src="https://source.unsplash.com/category/technology/?laptop" alt="{{ post.title }}"> 
+                {% endif %}
+                {% if post.author_image and post.author_url %}
+                  <a href="{{ post.author_url }}" data-toggle="tooltip" data-placement="bottom" title="Go to {{ post.author_name }}'s website" target="_blank">
+                    <img src="{{ post.author_image }}" alt="{{ post.author_name }}" class="img-circle center-block author-pic">
+                  </a>
+                {% endif %}
+                <div class="card-block">
+                  <h4 class="card-title">{{ post.title }} <small>by {{ post.author_name }}</small></h4>
+                  <p class="card-text">{{ post.excerpt }} <a href="{{ post.url | relative_url }}" class="card-link">Read more&hellip;</a></p>
+                  <p class="footer"><small class="text-muted">{{ post.date | date: "%B %-d, %Y" }}</small></p>
+                </div>
+              </div>
             {% endif %}
           {% endfor %}
         </div>
